--- a/pages/words/words_module/words_study.wxss
+++ b/pages/words/words_module/words_study.wxss
@@ -1,43 +1,63 @@
-.page {
+Page{
+  background-color: #D9C9BA;
+  height: 100%;
+}
+
+
+.body-swiper1 {
+  position: fixed;
+  top: 8%;
+  left: 5%;
+  width: 90%;
+  height: 80%;
+  z-index: 3;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 60px rgba(0, 0, 0, 0.06) inset;
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  border-radius: 12px;
+}
+
+.body-swiper2 {
+  position: fixed;
+  top: 6%;
+  left: 9%;
+  width: 82%;
+  height: 80%;
+  z-index: 2;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 60px rgba(0, 0, 0, 0.06) inset;
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  border-radius: 12px;
+}
+
+.body-swiper3 {
+  position: fixed;
+  top: 4.5%;
+  left: 12%;
+  width: 76%;
+  height: 80%;
+  z-index: 1;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 60px rgba(0, 0, 0, 0.06) inset;
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.62), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  border-radius: 12px;
+}
+
+.body-container {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
-  text-align: center;
+  background-color: #fff;
+  border-radius: 12px;
 }
-
-.word_page{
-
-
-}
-.word_page0
-{ 
-  width: 100%;
-  top: 20%;
-  position: fixed;
-  font-size: 60rpx;
-}
-
-.word_page1{
-  width: 100%;
-  top: 40%;
-  position: fixed;
-}
-
-.word_page2{
-
-
-}
-
-.add_btn{
-  width: 100%;
-  bottom:  8%;
-  position: fixed;
-}
-
 .btn1{
-  width: 80%;
+  position: fixed;
+  width: 40%;
+  bottom: 3%;
+  left: 7%;
   margin-top: 20rpx;
-  background-color: #D9C9BA;
+  background-color: #909090;
   color: white;
   border-radius: 98rpx
 }
@@ -47,25 +67,16 @@
 }
 
 .btn2{
-  width: 80%;
-  margin-top: 20rpx;
-  background-color: #909090;
-  color: white;
-  border-radius: 98rpx
-}
-
-.btn2::after {
-  border-radius: 98rpx;
-}
-
-.btn3{
-  width: 80%;
+  position: fixed;
+  width: 40%;
+  bottom: 3%;
+  right: 7%;
   margin-top: 20rpx;
   background-color: #D9C9BA;
   color: white;
   border-radius: 98rpx
 }
 
-.btn3::after {
+.btn2::after {
   border-radius: 98rpx;
 }
