--- a/pages/words/words_index.wxml
+++ b/pages/words/words_index.wxml
@@ -11,7 +11,7 @@
   <wux-white-space />
 
   <view class="word_index_circle">
-    <wux-circle percent="{{precent}}" sAngle = "270" size="{{winWidth * 0.8}}" strokeWidth="{{winWidth * 25/375}}" color="#D9C9BA" backgroundColor="#e5e5e5" >
+    <wux-circle percent="{{precent == 0 ? 0.001: precent}}" sAngle = "270" size="{{winWidth * 0.8}}" strokeWidth="{{winWidth * 25/375}}" color="#D9C9BA" backgroundColor="#f5f5f5" >
     {{ precent + '%'}} 
     </wux-circle>
   </view>
@@ -19,7 +19,7 @@
   <view class="word_index_task">
     <view class='status'>
       <wux-icon type='ios-radio-button-on' color="#ffffff" size="20"/> 
-      <text>{{word_learing}}</text>
+      <text>{{word_learning}}</text>
       <text>学习中字词</text>
     </view>
     <view class='status'>
